bucketlist/Static/style.css
@import url(http://fonts.googleapis.com/css?family=Ubuntu);
@import url(http://fonts.googleapis.com/css?family=Aubrey);

/* Entire body styling*/

body {
  background-image: url("bubbles.png");
  background-repeat: repeat-y;
  background-color: #cce0f1;
}

/* The Conquer Tomorrow image */
#logo {
  position: fixed;
  top: 8px;
  left: 560px;
}

/* Navigation styling */
.navbar {
  width: 100%;
  position: fixed;
  top: 90px;
  left: 230px;
}

.navbar ul {
    list-style-type: none;
    margin: 0;
    text-align: center;
    z-index: 100;
    position: fixed;
    top: 90px;
    left: 230px;
    background: #9065a1;
}

.navbar li {
    font-family: 'verdana';
    float: left;
    font-size: 18px;
    padding: 15px;
}

.navbar a {
      color: #ffffff;
      text-decoration: none;
}

.navbar a:hover {
  color: silver;
}
/* General formatting */
a {
  text-decoration: none;
}

h1 {
  clear: both;
  font-family: 'ubuntu', sans-serif;
}

h2 {
  cursor: pointer;
  font-family: 'ubuntu', sans-serif;
  text-align: center;
}

/* New Adventure page */
#newadventure {
  font-family: 'ubuntu', sans-serif;
}

#newadventuretext {
  border-radius: 0;
  -webkit-appearance: textfield;
  width: 400px;
  height: 250px;
}

textarea {
  background: url(http://i.stack.imgur.com/ynxjD.png) repeat-y;
  font: normal 14px verdana;
  line-height: 25px;
  padding: 2px 10px;
  border: solid 1px #ddd;
  width:100%;
  height:80%;
  resize: none;
}

/* Discover page-- Styling done in JS */
.discover_tabs {
  display:none;
}

/* All the buttons in general */
.buttons {
  -moz-box-shadow:inset 0px 1px 3px 0px #91b8b3;
  -webkit-box-shadow:inset 0px 1px 3px 0px #91b8b3;
  box-shadow:inset 0px 1px 3px 0px #91b8b3;
  background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #62665e), color-stop(1, #6c7c7c));
  background:-moz-linear-gradient(top, #768d87 5%, #6c7c7c 100%);
  background:-webkit-linear-gradient(top, #768d87 5%, #6c7c7c 100%);
  background:-o-linear-gradient(top, #768d87 5%, #6c7c7c 100%);
  background:-ms-linear-gradient(top, #768d87 5%, #6c7c7c 100%);
  background:linear-gradient(to bottom, #768d87 5%, #6c7c7c 100%);
  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#768d87', endColorstr='#6c7c7c',GradientType=0);
  background-color:#768d87;
  -moz-border-radius:5px;
  -webkit-border-radius:5px;
  border-radius:5px;
  border:1px solid #566963;
  display:inline-block;
  cursor:pointer;
  color:#ffffff;
  font-family:Arial;
  font-size:15px;
  font-weight:bold;
  padding:5px 5px;
  text-decoration:none;
  text-shadow:0px -1px 0px #2b665e;
}

.buttons:hover {
	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #6c7c7c), color-stop(1, #768d87));
	background:-moz-linear-gradient(top, #6c7c7c 5%, #768d87 100%);
	background:-webkit-linear-gradient(top, #6c7c7c 5%, #768d87 100%);
	background:-o-linear-gradient(top, #6c7c7c 5%, #768d87 100%);
	background:-ms-linear-gradient(top, #6c7c7c 5%, #768d87 100%);
	background:linear-gradient(to bottom, #6c7c7c 5%, #768d87 100%);
	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#6c7c7c', endColorstr='#768d87',GradientType=0);
	background-color:#6c7c7c;
}

/* The buttons (.buttons and #greeting)*/
.buttons:active {
	position:relative;
	top:1px;
}

/* referenced in .py file-- for the sign in or register */
#greeting {
  position: fixed;
  top: 25px;
  left: 300px;
}

/* The content on every html page linked */
.page_content {
  position: absolute;
  overflow-y: scroll;
  top: 130px;
  bottom: 0;
  right: 0;
  left: 258px;
  width: 920px;
  height: 85%;
  font-family: 'verdana';
  z-index: -200;
  font-size: 20px;
}

.page_content#home {
    text-align: center;
}


/*printing */

@media print {
    .navbar, .buttons, .print_button {
      display: none;
    }
    #logo {
      display:none;
    }
    .page_content {
        display: block;
        background-color: white;
        position: fixed;
        top: 130px;
        left: 258px;
        margin: 0;
        padding: 15px;
        font-size: 14px;
        line-height: 18px;
    }
}

/*social media footer */

footer {
  position: fixed;
  bottom: 0px;
  right: 10px;
}

.social {
  width: 38px;
  height: 38px;
  padding: 10px;
}

.printer {
  width: 40px;
  height: 40px;
  padding: 10px;
}

/* squad picture */
#squad {
   width: 300px;
   height: 300px;
   float: left;
   padding: 15px;
}

#mountainman {
  height: 208px;
  width: 350px;
  position: absolute;
  right: 100px;
  top: 125px;
}

#submit {
  position: absolute;
  left: 0px;
  top: 345px
}

